# CI_Transformer

./: .gitignore  README.md  pyproject.toml  setup.cfg
causal_synth/: __init__.py  ci.py  dag.py  mechanisms.py  scm.py  utils.py
ci_models/: __init__.py  layers.py  model.py  pyproject.toml  test_invariants.py  test_minimal.py
ci_set_transformer/: layers.py  model.py  test_minimal.py  utils.py
ci_training/: streaming.py  train.py
ci_training/examples/: train_ci.py
examples/: generate_and_query.py  test.py
scripts/: train_ci.py
src/causal_data_gen/: datasets.py
src/ci_models/: test_invariants.py
src/ci_transformer/: __init__.py
src/ci_transformer/causal_data_gen/: __init__.py  dag.py
src/ci_transformer/training/: README.md  __init__.py  streaming.py  train.py
src/training/: README.md  __init__.py  pyproject.toml  streaming.py
src/training/examples/: train_ci.py
tests/ci_transformer/causal_data_gen/: test_api.py
tests/ci_transformer/ci_models/: test_invariants.py
tests/ci_transformer/training/: test_streaming_and_train.py
training/: README.md  pyproject.toml  train.py
training/examples/: train_ci.py
vae/: README.md  pyproject.toml
vae/examples/: train_celeba.py  train_oxford_pets.py
vae/vae/: __init__.py  config.py  data.py  io.py  models.py  objectives.py  train.py  trainer.py  utils.py
vae_interp/: README.md  pyproject.toml
vae_interp/vae_interp/: __init__.py  api.py  data.py  model_adapters.py
vae_interp/vae_interp/cli/: pair_intervene.py  traverse.py
