[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causal_synth"
version = "0.1.0"
description = "Synthetic continuous SCM generator with diverse mechanisms"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
