[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci_transformer"
version = "0.1.0"
description = "Synthetic continuous SCM generator with diverse mechanisms"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["causal_data_gen*", "ci_models*", "training*"]
exclude = ["tests*"]