[metadata]
name = ci_transformer
version = 0.1.0
description = Synthetic continuous SCM generator with diverse mechanisms

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    torch
python_requires = >=3.9

[options.packages.find]
where = src
include = ci_transformer*
exclude = tests*
