[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci_set_transformer"
version = "0.1.0"
description = "Conditional independence classifier with Set Transformer invariances"
requires-python = ">=3.9"
dependencies = ["torch"]

[tool.setuptools.packages.find]
where = ["."]
