[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vae"
version = "0.1.0"
description = "PyTorch VAE suite: VAE, beta-VAE, TC-VAE, DIP-VAE, FactorVAE"
requires-python = ">=3.9"
dependencies = ["torch", "torchvision", "tqdm"]

[tool.setuptools]
packages = ["vae"]
