[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vae_interp"
version = "0.1.0"
description = "Latent traversals and random-pair interventions for trained VAEs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch", "torchvision", "numpy", "pillow"]

[tool.setuptools.packages.find]
where = ["."]
